<resources>
    <string name="app_name" translatable="false">Buddy Finder</string>

    <!--###################################### GLOBAL ###########################################-->
    <string name="confirm">Confirm</string>
    <string name="reject">Cancel</string>
    <string name="close">Close</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="select_language">Select language</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="spanish">Spanish</string>
    <string name="filter">Filter</string>

    <!--###################################### INFO #############################################-->
    <string name="events_view_title">Search for events</string>
    <string name="not_logged_title">Welcome to Buddy Finder</string>
    <string name="not_logged_sign_in_info">Sign in and meet new buddies!</string>
    <string name="not_logged_sign_up_info">Or create new account</string>
    <string name="home_view_logged_title">Welcome to\nBuddy Finder</string>
    <string name="empty_events_list">Events list is empty</string>
    <string name="empty_joined_events_list_info">You did not join any event yet</string>
    <string name="empty_joined_event_list_tip">Find one, or create your own</string>
    <string name="delete_event_info">Are you sure to delete this event?</string>
    <string name="leave_event_info">Are you sure to leave this event?</string>
    <string name="operation_failed">Operation failed</string>

    <!--###################################### USER #############################################-->
    <string name="profile">Profile</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Re-password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_name">New name</string>
    <string name="new_email">New email</string>
    <string name="change_password_title">Change password</string>
    <string name="password_changed">Password changed</string>
    <string name="wrong_re_password">Wrong re-password</string>
    <string name="all_fields_required">All of fields need to be filled</string>
    <string name="email_field_required">Email is required</string>
    <string name="name_field_required">Name is required</string>
    <string name="email_format_error">Wrong email format</string>
    <string name="edit_user">Edit user</string>
    <string name="user_updated">User updated</string>
    <string name="create_account">Create account</string>

    <!--###################################### CONNECTION #######################################-->
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="logged_out">Logged out</string>
    <string name="logout_info">Are you sure to logout?</string>
    <string name="logout">Logout</string>


    <!--###################################### EVENT ############################################-->
    <string name="events">Events</string>
    <string name="new_event">New Event</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="members">Members</string>
    <string name="organizer">Organizer</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="delete">Delete</string>
    <string name="pick_date">Pick date</string>
    <string name="set_time">Set time</string>
    <string name="joined_event">Joined event</string>
    <string name="left_event">Left event</string>
    <string name="deleted_event">Event deleted</string>
    <string name="create_event">Create new event</string>
    <string name="incoming_events">Incoming events</string>
    <string name="set_location">Set location</string>
    <string name="select_day">Select day</string>
    <string name="created">Created</string>
    <string name="created_events">Created events</string>
    <string name="empty_created_events_list_info">You did not create any events yet</string>

    <string name="reset">Reset</string>
    <string name="distance">Distance</string>
    <string name="current_location">Current location</string>
</resources>