<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <View
        android:layout_width="@dimen/dialog_bar_width"
        android:layout_height="@dimen/dialog_bar_height"
        android:layout_gravity="center"
        android:background="@color/dark_gray"
        android:layout_marginBottom="@dimen/padding"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/filter"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/text_regular"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin">

            <TextView
                android:text="@string/distance"
                android:textSize="@dimen/text_info"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text=": "
                android:textSize="@dimen/text_info"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_distance"
                android:textSize="@dimen/text_info"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar"
            android:max="50"
            android:min="2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_margin"
            android:layout_marginBottom="@dimen/margin"/>

        <Button
            android:id="@+id/btn_dialog_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/component_regular_button"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding"/>

        <Button
            android:id="@+id/btn_dialog_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/component_regular_button"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding"/>

        <Button
            android:id="@+id/btn_dialog_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/component_flat_button"
            android:text="@string/reject"
            android:textSize="@dimen/text_info"
            android:textColor="@color/primary"
            android:layout_gravity="center" />

    </LinearLayout>
</LinearLayout>