<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <View
        android:layout_width="@dimen/dialog_bar_width"
        android:layout_height="@dimen/dialog_bar_height"
        android:layout_gravity="center"
        android:background="@color/dark_gray"
        android:layout_marginBottom="@dimen/padding"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/select_day"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/text_regular"
        android:textStyle="bold"/>

    <CalendarView
        android:id="@+id/calendar_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:textAlignment="center"
        android:background="@drawable/component_edit_text"/>

    <Button
        android:id="@+id/btn_calendar_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/component_regular_button"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/padding"/>

    <Button
        android:id="@+id/btn_calendar_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/component_flat_button"
        android:text="@string/close"
        android:textSize="@dimen/text_info"
        android:textColor="@color/primary"
        android:layout_gravity="center"/>

</LinearLayout>