<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:paddingHorizontal="@dimen/margin"
    android:paddingVertical="@dimen/padding">

    <RelativeLayout
        android:id="@+id/event_details_title_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:clickable="true"
            android:padding="@dimen/padding"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/component_image_button">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:src="@drawable/ic_arrow_left_primary"
                android:focusable="true"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/new_event"
            android:textColor="@color/text"
            android:textSize="@dimen/text_header"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/event_details_title_row"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_event_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="@dimen/padding"
                android:background="@drawable/component_edit_text"
                android:hint="@string/title"
                android:inputType="textCapSentences|text"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/margin"
                android:paddingVertical="@dimen/padding"
                android:textColor="@color/text"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/text_regular"
                android:importantForAutofill="no" />

            <RelativeLayout
                android:id="@+id/btn_event_create_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin"
                android:background="@drawable/component_label_button"
                android:clickable="true"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap">

                    <ImageView
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon"
                        android:focusable="true"
                        android:src="@drawable/ic_calendar_primary"
                        android:layout_marginRight="@dimen/padding"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_event_create_date"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/pick_date"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/text_message"
                        android:gravity="center_vertical"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:focusable="true"
                    android:src="@drawable/ic_arrow_right_primary"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_event_create_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin"
                android:background="@drawable/component_label_button"
                android:clickable="true"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap">

                    <ImageView
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon"
                        android:focusable="true"
                        android:src="@drawable/ic_time_primary"
                        android:layout_marginRight="@dimen/padding"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_event_create_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/set_time"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/text_message"
                        android:gravity="center_vertical"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:focusable="true"
                    android:src="@drawable/ic_arrow_right_primary"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin"
                android:background="@drawable/component_label_button"
                android:clickable="true"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap">

                    <ImageView
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon"
                        android:focusable="true"
                        android:src="@drawable/ic_location_primary"
                        android:layout_marginRight="@dimen/padding"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_event_create_location"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/primary"
                        android:text="@string/set_location"
                        android:textSize="@dimen/text_message"
                        android:gravity="center_vertical"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:focusable="true"
                    android:src="@drawable/ic_arrow_right_primary"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>


            <EditText
                android:id="@+id/et_event_description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_box"
                android:layout_marginBottom="@dimen/margin"
                android:background="@drawable/component_edit_text"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="200"
                android:paddingHorizontal="@dimen/margin"
                android:paddingVertical="@dimen/padding"
                android:scrollHorizontally="false"
                android:textColor="@color/text"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/text_regular"
                android:importantForAutofill="no" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin">

        <Button
            android:id="@+id/btn_event_creator_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/component_regular_button"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>